implement interactively see BitLocker unlocked progress

--- a/Desktop/src/main/resources/com/potato/desktop/main-frame.fxml
+++ b/Desktop/src/main/resources/com/potato/desktop/main-frame.fxml
@@ -127,7 +127,7 @@
 
                 <TitledPane text="Disk">
                     <VBox spacing="6">
-                        <Button text="Unlock BitLocker" fx:id=""/>
+                        <Button text="Unlock BitLocker" fx:id="bitLockerBtn" onMouseClicked="#onBitLockerBtnAction"/>
                     </VBox>
                 </TitledPane>
 
