--- a/Desktop/src/main/resources/com/potato/desktop/main-frame.fxml
+++ b/Desktop/src/main/resources/com/potato/desktop/main-frame.fxml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
-<BorderPane xmlns="http://javafx.com/javafx/21"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.potato.desktop.controller.MainFrameController">
+
+<BorderPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.potato.desktop.controller.MainFrameController">
 
     <top>
         <MenuBar>
             <menus>
-                <Menu text="Help"/>
-                <Menu text="About"/>
+                <Menu fx:id="help" text="Help">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Help" fx:id="helpMenuItem" onAction="#onHelpMenuItemAction"/>
+                  <MenuItem mnemonicParsing="false" text="About" fx:id="aboutMenuItem" onAction="#onAboutMenuItemAction"/>
+                  <MenuItem mnemonicParsing="false" text="Version" fx:id="versionMenuItem" onAction="#onVersionMenuItemAction"/>
+               </items></Menu>
             </menus>
         </MenuBar>
     </top>
 
     <left>
-        <VBox spacing="10" prefWidth="140">
+        <VBox prefWidth="140" spacing="10">
             <padding>
-                <Insets top="10" right="10" bottom="10" left="10"/>
+                <Insets bottom="10" left="10" right="10" top="10" />
             </padding>
 
-            <Button text="Monitor" fx:id="monitorBtn" onMouseClicked="#onMonitorBtnAction"/>
-            <Button text="Tools" fx:id="toolsBtn" onMouseClicked="#onToolsBtnAction"/>
+            <Button fx:id="monitorBtn" onMouseClicked="#onMonitorBtnAction" text="Monitor" />
+            <Button fx:id="toolsBtn" onMouseClicked="#onToolsBtnAction" text="Tools" />
         </VBox>
     </left>
 
@@ -35,112 +48,116 @@
             <VBox fx:id="monitorView" spacing="10" visible="true">
 
                 <padding>
-                    <Insets top="10" right="10" bottom="10" left="10"/>
+                    <Insets bottom="10" left="10" right="10" top="10" />
                 </padding>
                 <GridPane hgap="10" vgap="10">
                     <columnConstraints>
-                        <ColumnConstraints percentWidth="33"/>
-                        <ColumnConstraints percentWidth="34"/>
-                        <ColumnConstraints percentWidth="33"/>
+                        <ColumnConstraints percentWidth="33" />
+                        <ColumnConstraints percentWidth="34" />
+                        <ColumnConstraints percentWidth="33" />
                     </columnConstraints>
 
-                    <VBox spacing="8" alignment="CENTER" GridPane.columnIndex="0">
-                        <Label text="CPU Monitor" style="-fx-font-weight: bold"/>
+                    <VBox alignment="CENTER" spacing="8" GridPane.columnIndex="0">
+                        <Label style="-fx-font-weight: bold" text="CPU Monitor" />
                         <StackPane>
-                            <Circle radius="60"
-                                    style="-fx-fill: transparent; -fx-stroke: #4CAF50; -fx-stroke-width: 6"/>
-                            <Label text="Fan %"/>
+                            <Circle radius="60" style="-fx-fill: transparent; -fx-stroke: #4CAF50; -fx-stroke-width: 6" />
+                            <Label text="Fan %" />
                         </StackPane>
-                        <Label text="Temp" fx:id="cpuTemp"/>
-                        <Label text="Power" fx:id="cpuPower"/>
-                        <Label text="Clock" fx:id="cpuClock"/>
+                        <Label fx:id="cpuTemp" text="Temp" />
+                        <Label fx:id="cpuPower" text="Power" />
+                        <Label fx:id="cpuClock" text="Clock" />
                     </VBox>
 
                     <VBox spacing="6" GridPane.columnIndex="1">
-                        <Label text="System Information" style="-fx-font-weight: bold"/>
-                        <Label text="System Name" fx:id="systemName"/>
-                        <Label text="OS Version" fx:id="osVersion"/>
-                        <Label text="Laptop Model" fx:id="laptopModel"/>
-                        <Label text="System Type" fx:id="systemType"/>
-                        <Label text="Activation Status" fx:id="activationStatus"/>
+                        <Label style="-fx-font-weight: bold" text="System Information" />
+                        <Label fx:id="systemName" text="System Name" />
+                        <Label fx:id="osVersion" text="OS Version" />
+                        <Label fx:id="laptopModel" text="Laptop Model" />
+                        <Label fx:id="systemType" text="System Type" />
+                        <Label fx:id="activationStatus" text="Activation Status" />
                     </VBox>
 
-                    <VBox spacing="8" alignment="CENTER" GridPane.columnIndex="2">
-                        <Label text="GPU Monitor" style="-fx-font-weight: bold"/>
+                    <VBox alignment="CENTER" spacing="8" GridPane.columnIndex="2">
+                        <Label style="-fx-font-weight: bold" text="GPU Monitor" />
                         <StackPane>
-                            <Circle radius="60"
-                                    style="-fx-fill: transparent; -fx-stroke: #2196F3; -fx-stroke-width: 6"/>
-                            <Label text="Fan %"/>
+                            <Circle radius="60" style="-fx-fill: transparent; -fx-stroke: #2196F3; -fx-stroke-width: 6" />
+                            <Label text="Fan %" />
                         </StackPane>
-                        <Label text="Temp" fx:id="gpuTemp"/>
-                        <Label text="Power" fx:id="gpuPower"/>
-                        <Label text="Clock" fx:id="gpuClock"/>
+                        <Label fx:id="gpuTemp" text="Temp" />
+                        <Label fx:id="gpuPower" text="Power" />
+                        <Label fx:id="gpuClock" text="Clock" />
                     </VBox>
+               <rowConstraints>
+                  <RowConstraints />
+               </rowConstraints>
                 </GridPane>
 
                 <GridPane hgap="20" vgap="10">
                     <columnConstraints>
-                        <ColumnConstraints percentWidth="25"/>
-                        <ColumnConstraints percentWidth="25"/>
-                        <ColumnConstraints percentWidth="25"/>
-                        <ColumnConstraints percentWidth="25"/>
+                        <ColumnConstraints percentWidth="25" />
+                        <ColumnConstraints percentWidth="25" />
+                        <ColumnConstraints percentWidth="25" />
+                        <ColumnConstraints percentWidth="25" />
                     </columnConstraints>
 
                     <VBox GridPane.columnIndex="0">
-                        <Label text="Memory"/>
-                        <Label text="Total"/>
-                        <Label text="Used %"/>
+                        <Label text="Memory" />
+                        <Label text="Total" />
+                        <Label text="Used %" />
                     </VBox>
 
                     <VBox GridPane.columnIndex="1">
-                        <Label text="Disks"/>
-                        <Label text="Disk Info"/>
+                        <Label text="Disks" />
+                        <Label text="Disk Info" />
                     </VBox>
 
                     <VBox GridPane.columnIndex="2">
-                        <Label text="Network"/>
-                        <Label text="Connected / Disconnected"/>
+                        <Label text="Network" />
+                        <Label text="Connected / Disconnected" />
                     </VBox>
 
                     <VBox GridPane.columnIndex="3">
-                        <Label text="Battery"/>
-                        <Label text="Charging Status" fx:id="batteryChargingStatus"/>
-                        <Label text="Battery Remain" fx:id="batteryRemain"/>
-                        <Label text="Health" fx:id="batteryHealth"/>
-                        <Label text="Rate" fx:id="batteryRate"/>
+                        <Label text="Battery" />
+                        <Label fx:id="batteryChargingStatus" text="Charging Status" />
+                        <Label fx:id="batteryRemain" text="Battery Remain" />
+                        <Label fx:id="batteryHealth" text="Health" />
+                        <Label fx:id="batteryRate" text="Rate" />
                     </VBox>
+               <rowConstraints>
+                  <RowConstraints />
+               </rowConstraints>
                 </GridPane>
             </VBox>
 
             <VBox fx:id="toolsView" spacing="10" visible="false">
                 <padding>
-                    <Insets top="10" right="10" bottom="10" left="10"/>
+                    <Insets bottom="10" left="10" right="10" top="10" />
                 </padding>
-                <Label text="Tools" style="-fx-font-size: 16; -fx-font-weight: bold"/>
+                <Label style="-fx-font-size: 16; -fx-font-weight: bold" text="Tools" />
 
                 <TitledPane text="System">
                     <VBox spacing="6">
-                        <Button text="Activate Windows" fx:id="activateWinBtn" onMouseClicked="#onActivateWinBtnAction"/>
-                        <Button text="Restart Enter BIOS" fx:id="enterBIOSBtn" onMouseClicked="#onEnterBIOSBtnAction"/>
+                        <Button fx:id="activateWinBtn" onMouseClicked="#onActivateWinBtnAction" text="Activate Windows" />
+                        <Button fx:id="enterBIOSBtn" onMouseClicked="#onEnterBIOSBtnAction" text="Restart Enter BIOS" />
                     </VBox>
                 </TitledPane>
 
                 <TitledPane text="Disk">
                     <VBox spacing="6">
-                        <Button text="Unlock BitLocker" fx:id="bitLockerBtn" onMouseClicked="#onBitLockerBtnAction"/>
+                        <Button fx:id="bitLockerBtn" onMouseClicked="#onBitLockerBtnAction" text="Unlock BitLocker" />
                     </VBox>
                 </TitledPane>
 
                 <TitledPane text="Network">
                     <VBox spacing="6">
-                        <Button text="Proxy reset" fx:id="proxyResetBtn" onMouseClicked="#onRestProxyBtnAction"/>
-                        <Button text="Code 56 repair" fx:id="code65RepairBtn" onMouseClicked="#onCode56BtnAction"/>
+                        <Button fx:id="proxyResetBtn" onMouseClicked="#onRestProxyBtnAction" text="Proxy reset" />
+                        <Button fx:id="code65RepairBtn" onMouseClicked="#onCode56BtnAction" text="Code 56 repair" />
                     </VBox>
                 </TitledPane>
 
                 <TitledPane text="Stress Test">
                     <VBox spacing="6">
-                        <Button text="Stress Test" fx:id="stressTestBtn" onMouseClicked="#onStressTestBtnAction"/>
+                        <Button fx:id="stressTestBtn" onMouseClicked="#onStressTestBtnAction" text="Stress Test" />
                     </VBox>
                 </TitledPane>
             </VBox>
