fix wrong call order of stress test closing, fix hard-encoding of fxml, make the main window has a bettter default size

--- a/Desktop/src/main/resources/com/potato/desktop/activate-win-frame.fxml
+++ b/Desktop/src/main/resources/com/potato/desktop/activate-win-frame.fxml
@@ -13,14 +13,14 @@
         <Insets top="12" right="12" bottom="12" left="12"/>
     </padding>
 
-    <Label text="Activation Status:" style="-fx-font-weight: bold"/>
+    <Label text="%lab.activationStatusText" style="-fx-font-weight: bold"/>
 
     <Label fx:id="statusLabel"
-           text="Not activated"
+           text="%lang.false"
            wrapText="true"
            style="-fx-border-color: #cccccc; -fx-padding: 8"/>
 
-    <Button text="Activate"
+    <Button text="%btn.tools.activateWindows"
             fx:id="activateBtn"
             onMouseClicked="#onActivateBtnClick"
             maxWidth="Infinity"/>
