--- a/Desktop/src/main/resources/com/potato/desktop/bitlocker-frame.fxml
+++ b/Desktop/src/main/resources/com/potato/desktop/bitlocker-frame.fxml
@@ -13,7 +13,7 @@
         <Insets top="12" right="12" bottom="12" left="12"/>
     </padding>
 
-    <Label text="BitLocker Partitions"
+    <Label text="%lab.bitlocker.partitionsTitle"
            style="-fx-font-size: 16; -fx-font-weight: bold"/>
 
     <VBox fx:id="partitionList"
