--- a/Desktop/src/main/resources/com/potato/desktop/main-frame.fxml
+++ b/Desktop/src/main/resources/com/potato/desktop/main-frame.fxml
@@ -15,17 +15,23 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 
-<BorderPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.potato.desktop.controller.MainFrameController">
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.potato.desktop.controller.MainFrameController"
+            minHeight="400" minWidth="900">
 
     <top>
         <MenuBar>
             <menus>
-                <Menu fx:id="help" text="Help">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="Help" fx:id="helpMenuItem" onAction="#onHelpMenuItemAction"/>
-                  <MenuItem mnemonicParsing="false" text="About" fx:id="aboutMenuItem" onAction="#onAboutMenuItemAction"/>
-                  <MenuItem mnemonicParsing="false" text="Version" fx:id="versionMenuItem" onAction="#onVersionMenuItemAction"/>
-               </items></Menu>
+                <Menu text="%app.title.help">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="%app.title.help" fx:id="helpMenuItem"
+                                  onAction="#onHelpMenuItemAction"/>
+                        <MenuItem mnemonicParsing="false" text="%app.title.about" fx:id="aboutMenuItem"
+                                  onAction="#onAboutMenuItemAction"/>
+                        <MenuItem mnemonicParsing="false" text="%app.title.version" fx:id="versionMenuItem"
+                                  onAction="#onVersionMenuItemAction"/>
+                    </items>
+                </Menu>
             </menus>
         </MenuBar>
     </top>
@@ -33,131 +39,139 @@
     <left>
         <VBox prefWidth="140" spacing="10">
             <padding>
-                <Insets bottom="10" left="10" right="10" top="10" />
+                <Insets bottom="10" left="10" right="10" top="10"/>
             </padding>
 
-            <Button fx:id="monitorBtn" onMouseClicked="#onMonitorBtnAction" text="Monitor" />
-            <Button fx:id="toolsBtn" onMouseClicked="#onToolsBtnAction" text="Tools" />
+            <Button fx:id="monitorBtn" onMouseClicked="#onMonitorBtnAction" text="%btn.name.monitor"/>
+            <Button fx:id="toolsBtn" onMouseClicked="#onToolsBtnAction" text="%btn.name.tools"/>
         </VBox>
     </left>
 
     <center>
 
-        <StackPane fx:id="centerStack">
+        <StackPane>
 
             <VBox fx:id="monitorView" spacing="10" visible="true">
 
                 <padding>
-                    <Insets bottom="10" left="10" right="10" top="10" />
+                    <Insets bottom="10" left="10" right="10" top="10"/>
                 </padding>
                 <GridPane hgap="10" vgap="10">
                     <columnConstraints>
-                        <ColumnConstraints percentWidth="33" />
-                        <ColumnConstraints percentWidth="34" />
-                        <ColumnConstraints percentWidth="33" />
+                        <ColumnConstraints percentWidth="33"/>
+                        <ColumnConstraints percentWidth="34"/>
+                        <ColumnConstraints percentWidth="33"/>
                     </columnConstraints>
 
                     <VBox alignment="CENTER" spacing="8" GridPane.columnIndex="0">
-                        <Label style="-fx-font-weight: bold" text="CPU Monitor" />
+                        <Label style="-fx-font-weight: bold" text="%lab.name.cpuMonitor"/>
                         <StackPane>
-                            <Circle radius="60" style="-fx-fill: transparent; -fx-stroke: #4CAF50; -fx-stroke-width: 6" />
-                            <Label text="Fan %" />
+                            <Circle radius="60"
+                                    style="-fx-fill: transparent; -fx-stroke: #4CAF50; -fx-stroke-width: 6"/>
+                            <Label text="%lab.name.fanPercent"/>
                         </StackPane>
-                        <Label fx:id="cpuTemp" text="Temp" />
-                        <Label fx:id="cpuPower" text="Power" />
-                        <Label fx:id="cpuClock" text="Clock" />
+                        <Label fx:id="cpuTemp" text="%lab.name.temp"/>
+                        <Label fx:id="cpuPower" text="%lab.name.power"/>
+                        <Label fx:id="cpuClock" text="%lab.name.clock"/>
                     </VBox>
 
                     <VBox spacing="6" GridPane.columnIndex="1">
-                        <Label style="-fx-font-weight: bold" text="System Information" />
-                        <Label fx:id="systemName" text="System Name" />
-                        <Label fx:id="osVersion" text="OS Version" />
-                        <Label fx:id="laptopModel" text="Laptop Model" />
-                        <Label fx:id="systemType" text="System Type" />
-                        <Label fx:id="activationStatus" text="Activation Status" />
+                        <Label style="-fx-font-weight: bold" text="%lab.name.systemInfo"/>
+                        <Label fx:id="systemName" text="%lab.name.systemName"/>
+                        <Label fx:id="osVersion" text="%lab.name.osVersion"/>
+                        <Label fx:id="laptopModel" text="%lab.name.laptopModel"/>
+                        <Label fx:id="systemType" text="%lab.name.systemType"/>
+                        <Label fx:id="activationStatus" text="%lab.name.activationStatus"/>
                     </VBox>
 
                     <VBox alignment="CENTER" spacing="8" GridPane.columnIndex="2">
-                        <Label style="-fx-font-weight: bold" text="GPU Monitor" />
+                        <Label style="-fx-font-weight: bold" text="%lab.name.gpuMonitor"/>
                         <StackPane>
-                            <Circle radius="60" style="-fx-fill: transparent; -fx-stroke: #2196F3; -fx-stroke-width: 6" />
-                            <Label text="Fan %" />
+                            <Circle radius="60"
+                                    style="-fx-fill: transparent; -fx-stroke: #2196F3; -fx-stroke-width: 6"/>
+                            <Label text="%lab.name.fanPercent"/>
                         </StackPane>
-                        <Label fx:id="gpuTemp" text="Temp" />
-                        <Label fx:id="gpuPower" text="Power" />
-                        <Label fx:id="gpuClock" text="Clock" />
+                        <Label fx:id="gpuTemp" text="%lab.name.temp"/>
+                        <Label fx:id="gpuPower" text="%lab.name.power"/>
+                        <Label fx:id="gpuClock" text="%lab.name.clock"/>
                     </VBox>
-               <rowConstraints>
-                  <RowConstraints />
-               </rowConstraints>
+                    <rowConstraints>
+                        <RowConstraints/>
+                    </rowConstraints>
                 </GridPane>
 
                 <GridPane hgap="20" vgap="10">
                     <columnConstraints>
-                        <ColumnConstraints percentWidth="25" />
-                        <ColumnConstraints percentWidth="25" />
-                        <ColumnConstraints percentWidth="25" />
-                        <ColumnConstraints percentWidth="25" />
+                        <ColumnConstraints percentWidth="25"/>
+                        <ColumnConstraints percentWidth="25"/>
+                        <ColumnConstraints percentWidth="25"/>
+                        <ColumnConstraints percentWidth="25"/>
                     </columnConstraints>
 
                     <VBox GridPane.columnIndex="0">
-                        <Label text="Memory" />
-                        <Label text="Total" fx:id="ramTotal"/>
-                        <Label text="Used %" fx:id="ramUsage"/>
+                        <Label text="%lab.name.memory"/>
+                        <Label text="%lab.name.total" fx:id="ramTotal"/>
+                        <Label text="%lab.name.used" fx:id="ramUsage"/>
                     </VBox>
 
                     <VBox GridPane.columnIndex="1">
-                        <Label text="Disks" />
-                        <Label text="Disk Info" />
+                        <Label text="%lab.name.disks"/>
+                        <Label text="%lab.name.diskInfo"/>
                     </VBox>
 
                     <VBox GridPane.columnIndex="2">
-                        <Label text="Network" />
-                        <Label text="Connected / Disconnected" />
+                        <Label text="%lab.name.admin"/>
+                        <Label text="%lab.admin.status"/>
                     </VBox>
 
                     <VBox GridPane.columnIndex="3">
-                        <Label text="Battery" />
-                        <Label fx:id="batteryChargingStatus" text="Charging Status" />
-                        <Label fx:id="batteryRemain" text="Battery Remain" />
-                        <Label fx:id="batteryHealth" text="Health" />
-                        <Label fx:id="batteryRate" text="Rate" />
+                        <Label text="%lab.name.battery"/>
+                        <Label fx:id="batteryChargingStatus" text="%lab.batCharging"/>
+                        <Label fx:id="batteryRemain" text="%lab.batRemain"/>
+                        <Label fx:id="batteryHealth" text="%lab.batHealth"/>
+                        <Label fx:id="batteryRate" text="%lab.batRate"/>
                     </VBox>
-               <rowConstraints>
-                  <RowConstraints />
-               </rowConstraints>
+                    <rowConstraints>
+                        <RowConstraints/>
+                    </rowConstraints>
                 </GridPane>
             </VBox>
 
             <VBox fx:id="toolsView" spacing="10" visible="false">
                 <padding>
-                    <Insets bottom="10" left="10" right="10" top="10" />
+                    <Insets bottom="10" left="10" right="10" top="10"/>
                 </padding>
-                <Label style="-fx-font-size: 16; -fx-font-weight: bold" text="Tools" />
+                <Label style="-fx-font-size: 16; -fx-font-weight: bold" text="%lab.name.tools"/>
 
-                <TitledPane text="System">
+                <TitledPane text="%tp.name.system">
                     <VBox spacing="6">
-                        <Button fx:id="activateWinBtn" onMouseClicked="#onActivateWinBtnAction" text="Activate Windows" />
-                        <Button fx:id="enterBIOSBtn" onMouseClicked="#onEnterBIOSBtnAction" text="Restart Enter BIOS" />
+                        <Button fx:id="activateWinBtn" onMouseClicked="#onActivateWinBtnAction"
+                                text="%btn.tools.activateWindows"/>
+                        <Button fx:id="enterBIOSBtn" onMouseClicked="#onEnterBIOSBtnAction"
+                                text="%btn.tools.restartEnterBios"/>
                     </VBox>
                 </TitledPane>
 
-                <TitledPane text="Disk">
+                <TitledPane text="%tp.name.disk">
                     <VBox spacing="6">
-                        <Button fx:id="bitLockerBtn" onMouseClicked="#onBitLockerBtnAction" text="Unlock BitLocker" />
+                        <Button fx:id="bitLockerBtn" onMouseClicked="#onBitLockerBtnAction"
+                                text="%btn.tools.unlockBitLocker"/>
                     </VBox>
                 </TitledPane>
 
-                <TitledPane text="Network">
+                <TitledPane text="%tp.name.network">
                     <VBox spacing="6">
-                        <Button fx:id="proxyResetBtn" onMouseClicked="#onRestProxyBtnAction" text="Proxy reset" />
-                        <Button fx:id="code65RepairBtn" onMouseClicked="#onCode56BtnAction" text="Code 56 repair" />
+                        <Button fx:id="proxyResetBtn" onMouseClicked="#onRestProxyBtnAction"
+                                text="%btn.tools.proxyReset"/>
+                        <Button fx:id="code65RepairBtn" onMouseClicked="#onCode56BtnAction"
+                                text="%btn.tools.code56Repair"/>
                     </VBox>
                 </TitledPane>
 
-                <TitledPane text="Stress Test">
+                <TitledPane text="%tp.name.stressTest">
                     <VBox spacing="6">
-                        <Button fx:id="stressTestBtn" onMouseClicked="#onStressTestBtnAction" text="Stress Test" />
+                        <Button fx:id="stressTestBtn" onMouseClicked="#onStressTestBtnAction"
+                                text="%btn.tools.stressTest"/>
                     </VBox>
                 </TitledPane>
             </VBox>
