--- a/Desktop/src/main/resources/com/potato/desktop/activate-win-frame.fxml
+++ b/Desktop/src/main/resources/com/potato/desktop/activate-win-frame.fxml
@@ -6,7 +6,7 @@
 
 <VBox xmlns="http://javafx.com/javafx/21"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.potato.desktop.controller.ActivateWinFrameController"
+      fx:controller="com.potato.desktop.Controller.ActivateWinFrameController"
       spacing="12">
 
     <padding>
