--- a/Desktop/src/main/resources/com/potato/desktop/html-content-frame.fxml
+++ b/Desktop/src/main/resources/com/potato/desktop/html-content-frame.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.web.WebView?>
 
 <BorderPane prefHeight="450" prefWidth="600" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.potato.desktop.controller.HTMLContentFrameController">
+            fx:controller="com.potato.desktop.Controller.HTMLContentFrameController">
 
     <center>
         <WebView fx:id="webView"/>
