--- a/Desktop/src/main/resources/com/potato/desktop/stress-test-frame.fxml
+++ b/Desktop/src/main/resources/com/potato/desktop/stress-test-frame.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.text.Text?>
 
 <BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.potato.desktop.controller.StressTestFrameController">
+            fx:controller="com.potato.desktop.Controller.StressTestFrameController">
 
     <left>
         <VBox prefWidth="180" spacing="12">
